bad/invalid_cast_type_boolean.example_compiler_output
ERROR
[1mbad/invalid_cast_type_boolean.lat:3:13: [1;31merror: [0;1msyntax error at )[m
    (boolean)null == null;
            [1;32m^[m
